trunk/Archive2/ff/aebb84a5eb2faf/output
main.cpp:4:23: error: unsequenced modification and access to 'b' [-Werror,-Wunsequenced]
printf("%d",a+b-c*a-c*++b-c/10);
              ~       ^
1 error generated.
