trunk/Archive2/ff/aebb84a5eb2faf/main.cpp
#include <stdio.h>
int main(){
int a = 10, b = 5, c = 3 ;
printf("%d",a+b-c*a-c*++b-c/10);
}

